--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "api",
+  "name": "car-n-api",
   "version": "1.0.0",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {}
 }
