--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,11 @@ services:
     container_name: api
     ports:
       - "3000:80"
+    volumes:
+      - type: bind
+        source: ./api/database.json
+        target: /app/database.json
+        read_only: false
   gui:
     build: gui
     image: car-n-gui
