--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "start-gui": "cd gui && npm start",
-    "start-api": "cd api && node index.js"
+    "start-api": "cd api && node index.js",
+    "start-gui-tests": "cd gui && npm test"
   },
   "private": true,
   "devDependencies": {
